fixed metrics footer so it doesn't spill

--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ body {
     background-size: cover;
     height: 100vh;
 }
+/* .header {
+    /* width: 100%; */
+    /* right: 50; */
+    /* left: 50; */
+    /* bottom: 100%; */
+    /* position: absolute; */
+} */
 .logo {
     /* border: solid green; */
     text-decoration: none;
@@ -32,11 +39,12 @@ body {
     margin-left: 40px;
 }
 .navbar {
-    height: 100%;
+    /* height: 100%; */
     display:flex;
     justify-content: space-between;
     align-items: center;
     font-stretch: wider;
+    /* position: absolute; */
 }
 .nav-list {
     /* border: soslid blue; */
@@ -56,7 +64,8 @@ body {
     display: none;
 }
 .nav-list a:hover {
-    background-color: hsla(210, 2%, 82%, 0.54)
+    background-color: hsla(210, 2%, 82%, 0.54);
+    border-radius: 3px;
 }
 .toggle-checkbox {
     display: none;
@@ -111,6 +120,13 @@ body {
         top: 0;
         right: 0;
         height: 100vh;
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-bottom: 48px;
+    }
+    .nav-list ul {
+        padding: 32px;
+        justify-content: space-between;
     }
     .nav-list a {
         box-sizing: border-box;
@@ -141,12 +157,10 @@ body {
         margin-top: 5px;
     }
     .close-sidebar-button {
-        padding-top: 25px; 
-        padding-bottom: 20px;
-        padding-left: 50px;
         top: 1.75rem;
         right: 2rem;
-        flex-direction: column;
+        flex-direction: row-reverse;
+        padding: 16px;
 }
     .toggle-button, .close-sidebar-button {
         display: block;
@@ -165,8 +179,12 @@ nav a {
     color: black;
     display: flex;
 }
+.icons a {
+    padding: 6px;
+}
 .icons a:hover {
-background-color: hsla(210, 2%, 82%, 0.54)
+background-color: hsla(210, 2%, 82%, 0.54);
+border-radius: 3px;
 }
 .fa-solid.fa-globe {
     color: black;
@@ -177,12 +195,8 @@ background-color: hsla(210, 2%, 82%, 0.54)
 .fa-solid.fa-question {
     color: black;
 }
-.icons a {
-    padding: 5px;
-}
 .title {
     text-align: center;
-    /* position: sticky; */
     align-content: center;
 }
 .title h1 {
@@ -196,60 +210,48 @@ background-color: hsla(210, 2%, 82%, 0.54)
     font-size: 14px;
     font-stretch: semi-expanded;
 }
-footer {
-    position: absolute;
-    display: flex;
-    right: 0;
-    left: 0;
-    bottom: 0; 
-    height: 15%;
-}
 .metrics {
+    position: absolute;
     justify-content: center;
-    display: flex;
     /* border: solid green; */
     color: white;
     justify-content: center;
     align-items:flex-start;
     flex-wrap: wrap;
     text-align: center;
-    width: 100%;
+    right: 0;
+    left: 0;
+    bottom: 7%; 
+    display: flex;
 }
 .metric-items {
+    flex-direction: row;
     /* border: solid brown; */
     width: 160px;
     height: 72px;
-    position: sticky;
+    align-content: flex-start;
 }
 .metric-items h3 {
     /* border: solid pink; */
     font-size: 24px;
     font-weight: 500;
     font-stretch: wider;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 .metric-items p {
     /* border: solid blue; */
     font-size: 12px;
     font-stretch: wider;
-    align-content: flex-start;
 }
-.get-updates {
-    width: 320px;
-    height: 72px;
-    /* border: solid blue; */
-}
-.get-updates button {
+.metric-button {
     background: #1e7cffd3;
     font-size: medium;
     width: 200px;
     color: white;
     padding: 10px;
-    border-radius: 6px;
+    border-radius: 3px;
     cursor: pointer;
     font-size: 14px;
     font-stretch: wider;
+    border: none;
 }
-
-
-
